<?xml version="1.0"?>
<package format="2">
  <name>asv_sim</name>
  <version>0.1.0</version>
  <description>
    This package contains plugins and models for simulating surface vessels.
  </description>
  <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/srmainwaring/asv_sim</url>
  <url type="repository">https://github.com/srmainwaring/asv_sim</url>
  <url type="bugtracker">https://github.com/srmainwaring/asv_sim/issues</url>
  <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>asv_sim_gazebo</exec_depend>
  <exec_depend>asv_sim_gazebo_plugins</exec_depend>
  <export>
    <metapackage />
  </export>
</package>
