<?xml version="1.0"?>
<package format="2">
  <name>asv_teleop</name>
  <version>0.0.0</version>
  <description>
    ROS nodes to subscribe to joystick messages: sensor_msgs/Joy 
  </description>

  <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
  <license>GPLv3</license>
  <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>osx_joystick</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
