<?xml version="1.0"?>
<package format="2">
  <name>rs750_description</name>
  <version>0.1.0</version>
  <description>
    Robot description for the RS750 robot.
  </description>

  <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
  <license>GPLv3</license>
  <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>

