<?xml version="1.0"?>
<package format="2">
  <name>tug_boat_gazebo</name>
  <version>0.0.0</version>
  <description>
    This package contains launch files for the tug boat model.
  </description>

  <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
  <license>GPLv3</license>
  <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>asv_wave_sim_gazebo</exec_depend>
  <exec_depend>asv_wave_sim_gazebo_plugins</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>tug_boat_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>